--- a/index2.html
+++ b/index2.html
@@ -19,7 +19,7 @@
     body {
       font-family: 'Source Code Pro', monospace;
       /* Imagem de fundo fixa e centralizada */
-      background: url("./images/cave_background_converted.jpg") no-repeat center center fixed;
+      background: url("cave_background_converted.jpg") no-repeat center center fixed;
       background-size: cover; /* Ajusta a imagem para cobrir toda a área */
       color: #fff;
       min-height: 100vh;
